--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/image/channels4_profile.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
       content=" İbrahim Akyel | 3D Golf Portfolio react javascript css html ibrahim akyel front end devoloper" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon"
+      href="%PUBLIC_URL%/image/channels4_profile.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>İbrahim Akyel | 3D Golf Portfolio</title>
   </head>
